--- a/ClassNote/angular.json
+++ b/ClassNote/angular.json
@@ -32,9 +32,11 @@
               }
             ],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/theme/variables.scss",
               "src/global.scss"
             ],
+            
             "scripts": []
           },
           "configurations": {
@@ -115,6 +117,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/theme/variables.scss",
               "src/global.scss"
             ],
