--- a/ClassNote/package.json
+++ b/ClassNote/package.json
@@ -31,9 +31,11 @@
     "@ionic/angular": "^7.0.0",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "avatar-initials": "^6.0.0",
+    "file-saver": "^2.0.5",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
